dev: Update locales

--- a/pkg/webui/locales/en.json
+++ b/pkg/webui/locales/en.json
@@ -2,11 +2,6 @@
   "components.data-sheet.index.noData": "No data available",
   "components.error-notification.story.problem": "We got a problem here!",
   "components.error-notification.story.lengthyProblem": "We got a problem here! And the description is quite lengthy as well, which can sometimes be a problem.",
-  "components.events-list.event.details.index.showRaw": "Show raw payload",
-  "components.events-list.event.details.index.hideRaw": "Hide raw payload",
-  "components.events-list.list.error-boundary.index.title": "Error cause",
-  "components.events-list.list.error-boundary.index.overviewEntry": "Something went wrong when displaying this event",
-  "components.events-list.widget.index.seeAllActivity": "See all activity",
   "components.file-input.index.selectAFile": "Select a file…",
   "components.file-input.index.changeFile": "Change file…",
   "components.file-input.index.noFileSelected": "No file selected",
@@ -66,10 +61,23 @@
   "console.components.downlink-form.index.scheduleDownlink": "Schedule Downlink",
   "console.components.downlink-form.index.downlinkSuccess": "Downlink was scheduled successfully",
   "console.components.downlink-form.index.payloadDescription": "The desired payload bytes of the downlink message",
-  "console.components.events-list.messages.frmPayload": "FRMPayload",
-  "console.components.events-list.messages.devAddr": "DevAddr",
-  "console.components.events-list.messages.fPort": "FPort",
-  "console.components.events-list.shared.components.json-payload.index.invalid": "Invalid JSON",
+  "console.components.events.messages.frmPayload": "FRMPayload",
+  "console.components.events.messages.devAddr": "DevAddr",
+  "console.components.events.messages.fPort": "FPort",
+  "console.components.events.messages.fCnt": "FCnt",
+  "console.components.events.messages.rawPayload": "Raw payload",
+  "console.components.events.messages.txPower": "Tx Power",
+  "console.components.events.messages.bandwidth": "Bandwidth",
+  "console.components.events.messages.metrics": "Metrics",
+  "console.components.events.messages.snr": "SNR",
+  "console.components.events.messages.sessionKeyId": "Session key ID",
+  "console.components.events.messages.selectedMacVersion": "Selected MAC version",
+  "console.components.events.messages.eventDetails": "Event details",
+  "console.components.events.messages.errorOverviewEntry": "There was an error and the event cannot be displayed. The raw event can by viewed by clicking this row.",
+  "console.components.events.messages.dataPreview": "Data preview",
+  "console.components.events.messages.seeAllActivity": "See all activity",
+  "console.components.events.messages.syntheticEvent": "Note: This meta event did not originate from the event stream",
+  "console.components.events.previews.shared.json-payload.index.invalid": "Invalid JSON",
   "console.components.gateway-data-form.index.enforced": "Enforced",
   "console.components.gateway-data-form.index.dutyCycle": "Duty cycle",
   "console.components.gateway-data-form.index.gatewayIdPlaceholder": "my-new-gateway",
@@ -217,6 +225,18 @@
   "console.containers.webhooks-table.index.templateId": "Template ID",
   "console.containers.webhooks-table.index.format": "Format",
   "console.containers.webhooks-table.index.baseUrl": "Base URL",
+  "console.lib.events.definitions.synthetic.error.unknown:type": "Unknown error",
+  "console.lib.events.definitions.synthetic.error.unknown:preview": "An unknown error occurred and one or more events could not be retrieved",
+  "console.lib.events.definitions.synthetic.error.network_error:type": "Network error",
+  "console.lib.events.definitions.synthetic.error.network_error:preview": "The stream connection was lost due to a network error",
+  "console.lib.events.definitions.synthetic.status.reconnecting:type": "Reconnecting",
+  "console.lib.events.definitions.synthetic.status.reconnecting:preview": "Attempting to reconnect…",
+  "console.lib.events.definitions.synthetic.status.reconnected:type": "Stream resumed",
+  "console.lib.events.definitions.synthetic.status.reconnected:preview": "The stream connection has been re-established",
+  "console.lib.events.definitions.synthetic.status.closed:type": "Stream connection closed",
+  "console.lib.events.definitions.synthetic.status.closed:preview": "The connection was closed by the stream provider",
+  "console.lib.events.definitions.synthetic.status.cleared:type": "Events cleared",
+  "console.lib.events.definitions.synthetic.status.cleared:preview": "The events list has been cleared",
   "console.views.admin-user-management-edit.index.updateSuccess": "User updated",
   "console.views.admin-user-management-edit.index.deleteSuccess": "User deleted",
   "console.views.application-add.index.applicationName": "Application name",
