--- a/pkg/webui/locales/xx.json
+++ b/pkg/webui/locales/xx.json
@@ -2,11 +2,6 @@
   "components.data-sheet.index.noData": "Xx xxxx xxxxxxxxx",
   "components.error-notification.story.problem": "Xx xxx x xxxxxxx xxxx!",
   "components.error-notification.story.lengthyProblem": "Xx xxx x xxxxxxx xxxx! Xxx xxx xxxxxxxxxxx xx xxxxx xxxxxxx xx xxxx, xxxxx xxx xxxxxxxxx xx x xxxxxxx.",
-  "components.events-list.event.details.index.showRaw": "Xxxx xxx xxxxxxx",
-  "components.events-list.event.details.index.hideRaw": "Xxxx xxx xxxxxxx",
-  "components.events-list.list.error-boundary.index.title": "Xxxxx xxxxx",
-  "components.events-list.list.error-boundary.index.overviewEntry": "Xxxxxxxxx xxxx xxxxx xxxx xxxxxxxxxx xxxx xxxxx",
-  "components.events-list.widget.index.seeAllActivity": "Xxx xxx xxxxxxxx",
   "components.file-input.index.selectAFile": "Xxxxxx x xxxxx",
   "components.file-input.index.changeFile": "Xxxxxx xxxxx",
   "components.file-input.index.noFileSelected": "Xx xxxx xxxxxxxx",
@@ -66,10 +61,23 @@
   "console.components.downlink-form.index.scheduleDownlink": "Xxxxxxxx Xxxxxxxx",
   "console.components.downlink-form.index.downlinkSuccess": "Xxxxxxxx xxx xxxxxxxxx xxxxxxxxxxxx",
   "console.components.downlink-form.index.payloadDescription": "Xxx xxxxxxx xxxxxxx xxxxx xx xxx xxxxxxxx xxxxxxx",
-  "console.components.events-list.messages.frmPayload": "XXXXxxxxxx",
-  "console.components.events-list.messages.devAddr": "XxxXxxx",
-  "console.components.events-list.messages.fPort": "XXxxx",
-  "console.components.events-list.shared.components.json-payload.index.invalid": "Xxxxxxx XXXX",
+  "console.components.events.messages.frmPayload": "XXXXxxxxxx",
+  "console.components.events.messages.devAddr": "XxxXxxx",
+  "console.components.events.messages.fPort": "XXxxx",
+  "console.components.events.messages.fCnt": "XXxx",
+  "console.components.events.messages.rawPayload": "Xxx xxxxxxx",
+  "console.components.events.messages.txPower": "Xx Xxxxx",
+  "console.components.events.messages.bandwidth": "Xxxxxxxxx",
+  "console.components.events.messages.metrics": "Xxxxxxx",
+  "console.components.events.messages.snr": "XXX",
+  "console.components.events.messages.sessionKeyId": "Xxxxxxx xxx XX",
+  "console.components.events.messages.selectedMacVersion": "Xxxxxxxx XXX xxxxxxx",
+  "console.components.events.messages.eventDetails": "Xxxxx xxxxxxx",
+  "console.components.events.messages.errorOverviewEntry": "Xxxxx xxx xx xxxxx xxx xxx xxxxx xxxxxx xx xxxxxxxxx. Xxx xxx xxxxx xxx xx xxxxxx xx xxxxxxxx xxxx xxx.",
+  "console.components.events.messages.dataPreview": "Xxxx xxxxxxx",
+  "console.components.events.messages.seeAllActivity": "Xxx xxx xxxxxxxx",
+  "console.components.events.messages.syntheticEvent": "Xxxx: Xxxx xxxx xxxxx xxx xxx xxxxxxxxx xxxx xxx xxxxx xxxxxx",
+  "console.components.events.previews.shared.json-payload.index.invalid": "Xxxxxxx XXXX",
   "console.components.gateway-data-form.index.enforced": "Xxxxxxxx",
   "console.components.gateway-data-form.index.dutyCycle": "Xxxx xxxxx",
   "console.components.gateway-data-form.index.gatewayIdPlaceholder": "xx-xxx-xxxxxxx",
@@ -217,6 +225,18 @@
   "console.containers.webhooks-table.index.templateId": "Xxxxxxxx XX",
   "console.containers.webhooks-table.index.format": "Xxxxxx",
   "console.containers.webhooks-table.index.baseUrl": "Xxxx XXX",
+  "console.lib.events.definitions.synthetic.error.unknown:type": "Xxxxxxx xxxxx",
+  "console.lib.events.definitions.synthetic.error.unknown:preview": "Xx xxxxxxx xxxxx xxxxxxxx xxx xxx xx xxxx xxxxxx xxxxx xxx xx xxxxxxxxx",
+  "console.lib.events.definitions.synthetic.error.network_error:type": "Xxxxxxx xxxxx",
+  "console.lib.events.definitions.synthetic.error.network_error:preview": "Xxx xxxxxx xxxxxxxxxx xxx xxxx xxx xx x xxxxxxx xxxxx",
+  "console.lib.events.definitions.synthetic.status.reconnecting:type": "Xxxxxxxxxxxx",
+  "console.lib.events.definitions.synthetic.status.reconnecting:preview": "Xxxxxxxxxx xx xxxxxxxxxx",
+  "console.lib.events.definitions.synthetic.status.reconnected:type": "Xxxxxx xxxxxxx",
+  "console.lib.events.definitions.synthetic.status.reconnected:preview": "Xxx xxxxxx xxxxxxxxxx xxx xxxx xx-xxxxxxxxxxx",
+  "console.lib.events.definitions.synthetic.status.closed:type": "Xxxxxx xxxxxxxxxx xxxxxx",
+  "console.lib.events.definitions.synthetic.status.closed:preview": "Xxx xxxxxxxxxx xxx xxxxxx xx xxx xxxxxx xxxxxxxx",
+  "console.lib.events.definitions.synthetic.status.cleared:type": "Xxxxxx xxxxxxx",
+  "console.lib.events.definitions.synthetic.status.cleared:preview": "Xxx xxxxxx xxxx xxx xxxx xxxxxxx",
   "console.views.admin-user-management-edit.index.updateSuccess": "Xxxx xxxxxxx",
   "console.views.admin-user-management-edit.index.deleteSuccess": "Xxxx xxxxxxx",
   "console.views.application-add.index.applicationName": "Xxxxxxxxxxx xxxx",
