dev: Update locales

--- a/pkg/webui/locales/en.json
+++ b/pkg/webui/locales/en.json
@@ -50,17 +50,15 @@
   "console.components.device-import-form.index.fileInfoPlaceholder": "Please select a template format",
   "console.components.device-import-form.index.claimAuthCode": "Set claim authentication code",
   "console.components.device-import-form.index.targetedComponents": "Targeted components",
-  "console.components.downlink-form.index.insertMode": "Insert Mode",
-  "console.components.downlink-form.index.insertModeDescription": "Messages can either replace the downlink queue or append to it",
-  "console.components.downlink-form.index.lengthMustBeEven": "Payload must be complete",
-  "console.components.downlink-form.index.replace": "Replace",
-  "console.components.downlink-form.index.push": "Push",
-  "console.components.downlink-form.index.validateFPort": "FPort must be between 1 and 223",
-  "console.components.downlink-form.index.confirmation": "Confirmation",
-  "console.components.downlink-form.index.confirmed": "Confirmed",
-  "console.components.downlink-form.index.scheduleDownlink": "Schedule Downlink",
-  "console.components.downlink-form.index.downlinkSuccess": "Downlink was scheduled successfully",
-  "console.components.downlink-form.index.payloadDescription": "The desired payload bytes of the downlink message",
+  "console.components.downlink-form.downlink-form.insertMode": "Insert Mode",
+  "console.components.downlink-form.downlink-form.insertModeDescription": "Messages can either replace the downlink queue or append to it",
+  "console.components.downlink-form.downlink-form.replace": "Replace",
+  "console.components.downlink-form.downlink-form.push": "Push",
+  "console.components.downlink-form.downlink-form.confirmation": "Confirmation",
+  "console.components.downlink-form.downlink-form.confirmed": "Confirmed",
+  "console.components.downlink-form.downlink-form.scheduleDownlink": "Schedule downlink",
+  "console.components.downlink-form.downlink-form.downlinkSuccess": "Downlink scheduled",
+  "console.components.downlink-form.downlink-form.payloadDescription": "The desired payload bytes of the downlink message",
   "console.components.events.messages.frmPayload": "FRMPayload",
   "console.components.events.messages.devAddr": "DevAddr",
   "console.components.events.messages.fPort": "FPort",
@@ -147,6 +145,9 @@
   "console.components.rights-group.index.grantType": "Grant type",
   "console.components.rights-group.index.allCurrentAndFutureRights": "Grant all current and future rights",
   "console.components.rights-group.index.selectIndividualRights": "Grant individual rights",
+  "console.components.uplink-form.uplink-form.simulateUplink": "Simulate uplink",
+  "console.components.uplink-form.uplink-form.payloadDescription": "The desired payload bytes of the uplink message",
+  "console.components.uplink-form.uplink-form.uplinkSuccess": "Uplink sent",
   "console.components.user-data-form.index.adminLabel": "Administrator",
   "console.components.user-data-form.index.userDescPlaceholder": "Description for my new user",
   "console.components.user-data-form.index.userDescDescription": "Optional user description; can also be used to save notes about the user",
@@ -582,7 +583,7 @@
   "lib.shared-messages.lorawanPhyVersionDescription": "The LoRaWAN PHY version of the end device",
   "lib.shared-messages.macVersion": "LoRaWAN version",
   "lib.shared-messages.macVersionDescription": "The LoRaWAN version (MAC), as provided by the device manufacturer",
-  "lib.shared-messages.messages": "Messages",
+  "lib.shared-messages.messaging": "Messaging",
   "lib.shared-messages.messageTypes": "Message types",
   "lib.shared-messages.milliseconds": "milliseconds",
   "lib.shared-messages.minutes": "minutes",
@@ -697,11 +698,14 @@
   "lib.shared-messages.validateApiKey": "API keys must follow the format \"NNSXS.[…].[…]\"",
   "lib.shared-messages.validateDelayFormat": "{field} must be a positive, whole number",
   "lib.shared-messages.validateEmail": "An email address must use exactly one \"@\" and use no special characters",
+  "lib.shared-messages.validateHexLength": "{field} must be a complete hex value",
   "lib.shared-messages.validateIdFormat": "{field} must contain only lowercase letters, numbers and dashes (-)",
   "lib.shared-messages.validateInt32": "{field} must be a whole number, negative or positive",
   "lib.shared-messages.validateLatitude": "Latitude must be a whole or decimal number between -90 and 90",
   "lib.shared-messages.validateLength": "{field} must be exactly {length} characters long",
   "lib.shared-messages.validateLongitude": "Longitude must be a whole or decimal number between -180 and 180",
+  "lib.shared-messages.validateNumberGte": "{field} must be at least {min} or higher",
+  "lib.shared-messages.validateNumberLte": "{field} must be {max} or lower",
   "lib.shared-messages.validateMqttPassword": "{field} must be empty or have at least 2 characters",
   "lib.shared-messages.validateMqttUrl": "MQTT URLs must have the format \"mqtt[s]://[username][:password]@host.domain[:port]\"",
   "lib.shared-messages.validateNoSpaces": "{field} must contain no spaces",
