--- a/pkg/webui/locales/xx.json
+++ b/pkg/webui/locales/xx.json
@@ -50,17 +50,15 @@
   "console.components.device-import-form.index.fileInfoPlaceholder": "Xxxxxx xxxxxx x xxxxxxxx xxxxxx",
   "console.components.device-import-form.index.claimAuthCode": "Xxx xxxxx xxxxxxxxxxxxxx xxxx",
   "console.components.device-import-form.index.targetedComponents": "Xxxxxxxx xxxxxxxxxx",
-  "console.components.downlink-form.index.insertMode": "Xxxxxx Xxxx",
-  "console.components.downlink-form.index.insertModeDescription": "Xxxxxxxx xxx xxxxxx xxxxxxx xxx xxxxxxxx xxxxx xx xxxxxx xx xx",
-  "console.components.downlink-form.index.lengthMustBeEven": "Xxxxxxx xxxx xx xxxxxxxx",
-  "console.components.downlink-form.index.replace": "Xxxxxxx",
-  "console.components.downlink-form.index.push": "Xxxx",
-  "console.components.downlink-form.index.validateFPort": "XXxxx xxxx xx xxxxxxx x xxx xxx",
-  "console.components.downlink-form.index.confirmation": "Xxxxxxxxxxxx",
-  "console.components.downlink-form.index.confirmed": "Xxxxxxxxx",
-  "console.components.downlink-form.index.scheduleDownlink": "Xxxxxxxx Xxxxxxxx",
-  "console.components.downlink-form.index.downlinkSuccess": "Xxxxxxxx xxx xxxxxxxxx xxxxxxxxxxxx",
-  "console.components.downlink-form.index.payloadDescription": "Xxx xxxxxxx xxxxxxx xxxxx xx xxx xxxxxxxx xxxxxxx",
+  "console.components.downlink-form.downlink-form.insertMode": "Xxxxxx Xxxx",
+  "console.components.downlink-form.downlink-form.insertModeDescription": "Xxxxxxxx xxx xxxxxx xxxxxxx xxx xxxxxxxx xxxxx xx xxxxxx xx xx",
+  "console.components.downlink-form.downlink-form.replace": "Xxxxxxx",
+  "console.components.downlink-form.downlink-form.push": "Xxxx",
+  "console.components.downlink-form.downlink-form.confirmation": "Xxxxxxxxxxxx",
+  "console.components.downlink-form.downlink-form.confirmed": "Xxxxxxxxx",
+  "console.components.downlink-form.downlink-form.scheduleDownlink": "Xxxxxxxx xxxxxxxx",
+  "console.components.downlink-form.downlink-form.downlinkSuccess": "Xxxxxxxx xxxxxxxxx",
+  "console.components.downlink-form.downlink-form.payloadDescription": "Xxx xxxxxxx xxxxxxx xxxxx xx xxx xxxxxxxx xxxxxxx",
   "console.components.events.messages.frmPayload": "XXXXxxxxxx",
   "console.components.events.messages.devAddr": "XxxXxxx",
   "console.components.events.messages.fPort": "XXxxx",
@@ -147,6 +145,9 @@
   "console.components.rights-group.index.grantType": "Xxxxx xxxx",
   "console.components.rights-group.index.allCurrentAndFutureRights": "Xxxxx xxx xxxxxxx xxx xxxxxx xxxxxx",
   "console.components.rights-group.index.selectIndividualRights": "Xxxxx xxxxxxxxxx xxxxxx",
+  "console.components.uplink-form.uplink-form.simulateUplink": "Xxxxxxxx xxxxxx",
+  "console.components.uplink-form.uplink-form.payloadDescription": "Xxx xxxxxxx xxxxxxx xxxxx xx xxx xxxxxx xxxxxxx",
+  "console.components.uplink-form.uplink-form.uplinkSuccess": "Xxxxxx xxxx",
   "console.components.user-data-form.index.adminLabel": "Xxxxxxxxxxxxx",
   "console.components.user-data-form.index.userDescPlaceholder": "Xxxxxxxxxxx xxx xx xxx xxxx",
   "console.components.user-data-form.index.userDescDescription": "Xxxxxxxx xxxx xxxxxxxxxxx; xxx xxxx xx xxxx xx xxxx xxxxx xxxxx xxx xxxx",
@@ -582,7 +583,7 @@
   "lib.shared-messages.lorawanPhyVersionDescription": "Xxx XxXxXXX XXX xxxxxxx xx xxx xxx xxxxxx",
   "lib.shared-messages.macVersion": "XxXxXXX xxxxxxx",
   "lib.shared-messages.macVersionDescription": "Xxx XxXxXXX xxxxxxx (XXX), xx xxxxxxxx xx xxx xxxxxx xxxxxxxxxxxx",
-  "lib.shared-messages.messages": "Xxxxxxxx",
+  "lib.shared-messages.messaging": "Xxxxxxxxx",
   "lib.shared-messages.messageTypes": "Xxxxxxx xxxxx",
   "lib.shared-messages.milliseconds": "xxxxxxxxxxxx",
   "lib.shared-messages.minutes": "xxxxxxx",
@@ -697,11 +698,14 @@
   "lib.shared-messages.validateApiKey": "XXX xxxx xxxx xxxxxx xxx xxxxxx \"XXXXX.[x].[x]\"",
   "lib.shared-messages.validateDelayFormat": "{field} xxxx xx x xxxxxxxx, xxxxx xxxxxx",
   "lib.shared-messages.validateEmail": "Xx xxxxx xxxxxxx xxxx xxx xxxxxxx xxx \"@\" xxx xxx xx xxxxxxx xxxxxxxxxx",
+  "lib.shared-messages.validateHexLength": "{field} xxxx xx x xxxxxxxx xxx xxxxx",
   "lib.shared-messages.validateIdFormat": "{field} xxxx xxxxxxx xxxx xxxxxxxxx xxxxxxx, xxxxxxx xxx xxxxxx (-)",
   "lib.shared-messages.validateInt32": "{field} xxxx xx x xxxxx xxxxxx, xxxxxxxx xx xxxxxxxx",
   "lib.shared-messages.validateLatitude": "Xxxxxxxx xxxx xx x xxxxx xx xxxxxxx xxxxxx xxxxxxx -xx xxx xx",
   "lib.shared-messages.validateLength": "{field} xxxx xx xxxxxxx {length} xxxxxxxxxx xxxx",
   "lib.shared-messages.validateLongitude": "Xxxxxxxxx xxxx xx x xxxxx xx xxxxxxx xxxxxx xxxxxxx -xxx xxx xxx",
+  "lib.shared-messages.validateNumberGte": "{field} xxxx xx xx xxxxx {min} xx xxxxxx",
+  "lib.shared-messages.validateNumberLte": "{field} xxxx xx {max} xx xxxxx",
   "lib.shared-messages.validateMqttPassword": "{field} xxxx xx xxxxx xx xxxx xx xxxxx x xxxxxxxxxx",
   "lib.shared-messages.validateMqttUrl": "XXXX XXXx xxxx xxxx xxx xxxxxx \"xxxx[x]://[xxxxxxxx][:xxxxxxxx]@xxxx.xxxxxx[:xxxx]\"",
   "lib.shared-messages.validateNoSpaces": "{field} xxxx xxxxxxx xx xxxxxx",
