dev: Update locales

--- a/pkg/webui/locales/en.json
+++ b/pkg/webui/locales/en.json
@@ -91,6 +91,8 @@
   "console.components.gateway-data-form.index.scheduleAnyTimeDelay": "Schedule any time delay",
   "console.components.gateway-data-form.index.scheduleAnyTimeDescription": "Configure gateway delay (minimum: {minimumValue}ms, default: {defaultValue}ms)",
   "console.components.gateway-data-form.index.delayWarning": "Delay too short. The lower bound ({minimumValue}ms) will be used by the Gateway Server.",
+  "console.components.join-eui-prefixes-input.index.empty": "No prefix",
+  "console.components.join-eui-prefixes-input.index.zeroInput": "Fill with zeros",
   "console.components.location-form.index.deleteWarning": "Are you sure you want to delete this location entry?",
   "console.components.location-form.index.deleteLocation": "Remove location entry",
   "console.components.location-form.index.noLocationSet": "There is currently no location information set",
@@ -205,9 +207,6 @@
   "console.containers.gateway-location-form.gateway-location-form.privacy": "Privacy",
   "console.containers.gateway-location-form.gateway-location-form.publishLocation": "Publish location",
   "console.containers.gateways-table.index.ownedTabTitle": "Owned gateways",
-  "console.containers.join-eui-prefixes-input.index.prefixesFetchingFailure": "Prefixes unavailable",
-  "console.containers.join-eui-prefixes-input.join-eui-prefixes-input.empty": "No prefix",
-  "console.containers.join-eui-prefixes-input.join-eui-prefixes-input.zeroInput": "Fill with zeros",
   "console.containers.lora-cloud-form.index.token": "Token",
   "console.containers.lora-cloud-form.index.setLoRaCloudToken": "Set LoRa Cloud token",
   "console.containers.lora-cloud-form.index.deleteToken": "Delete token",
@@ -300,7 +299,7 @@
   "console.views.device-add.configuration-form.index.activationModeNone": "Do not configure activation",
   "console.views.device-add.configuration-form.index.start": "Start",
   "console.views.device-add.configuration-form.index.preparation": "Preparation",
-  "console.views.device-add.index.title": "Add new end device",
+  "console.views.device-add.device-add.title": "Add new end device",
   "console.views.device-add.messages.basicTitle": "Basic settings",
   "console.views.device-add.messages.basicDescription": "End device ID's, Name and Description",
   "console.views.device-add.messages.basicDetails": "Defines general settings of an end device",
