--- a/pkg/webui/locales/xx.json
+++ b/pkg/webui/locales/xx.json
@@ -91,6 +91,8 @@
   "console.components.gateway-data-form.index.scheduleAnyTimeDelay": "Xxxxxxxx xxx xxxx xxxxx",
   "console.components.gateway-data-form.index.scheduleAnyTimeDescription": "Xxxxxxxxx xxxxxxx xxxxx (xxxxxxx: {minimumValue}xx, xxxxxxx: {defaultValue}xx)",
   "console.components.gateway-data-form.index.delayWarning": "Xxxxx xxx xxxxx. Xxx xxxxx xxxxx ({minimumValue}xx) xxxx xx xxxx xx xxx Xxxxxxx Xxxxxx.",
+  "console.components.join-eui-prefixes-input.index.empty": "Xx xxxxxx",
+  "console.components.join-eui-prefixes-input.index.zeroInput": "Xxxx xxxx xxxxx",
   "console.components.location-form.index.deleteWarning": "Xxx xxx xxxx xxx xxxx xx xxxxxx xxxx xxxxxxxx xxxxx?",
   "console.components.location-form.index.deleteLocation": "Xxxxxx xxxxxxxx xxxxx",
   "console.components.location-form.index.noLocationSet": "Xxxxx xx xxxxxxxxx xx xxxxxxxx xxxxxxxxxxx xxx",
@@ -205,9 +207,6 @@
   "console.containers.gateway-location-form.gateway-location-form.privacy": "Xxxxxxx",
   "console.containers.gateway-location-form.gateway-location-form.publishLocation": "Xxxxxxx xxxxxxxx",
   "console.containers.gateways-table.index.ownedTabTitle": "Xxxxx xxxxxxxx",
-  "console.containers.join-eui-prefixes-input.index.prefixesFetchingFailure": "Xxxxxxxx xxxxxxxxxxx",
-  "console.containers.join-eui-prefixes-input.join-eui-prefixes-input.empty": "Xx xxxxxx",
-  "console.containers.join-eui-prefixes-input.join-eui-prefixes-input.zeroInput": "Xxxx xxxx xxxxx",
   "console.containers.lora-cloud-form.index.token": "Xxxxx",
   "console.containers.lora-cloud-form.index.setLoRaCloudToken": "Xxx XxXx Xxxxx xxxxx",
   "console.containers.lora-cloud-form.index.deleteToken": "Xxxxxx xxxxx",
@@ -300,7 +299,7 @@
   "console.views.device-add.configuration-form.index.activationModeNone": "Xx xxx xxxxxxxxx xxxxxxxxxx",
   "console.views.device-add.configuration-form.index.start": "Xxxxx",
   "console.views.device-add.configuration-form.index.preparation": "Xxxxxxxxxxx",
-  "console.views.device-add.index.title": "Xxx xxx xxx xxxxxx",
+  "console.views.device-add.device-add.title": "Xxx xxx xxx xxxxxx",
   "console.views.device-add.messages.basicTitle": "Xxxxx xxxxxxxx",
   "console.views.device-add.messages.basicDescription": "Xxx xxxxxx XX'x, Xxxx xxx Xxxxxxxxxxx",
   "console.views.device-add.messages.basicDetails": "Xxxxxxx xxxxxxx xxxxxxxx xx xx xxx xxxxxx",
