dev: Add frame counter width messages

--- a/pkg/webui/locales/en.json
+++ b/pkg/webui/locales/en.json
@@ -408,6 +408,8 @@
   "lib.errors.status-code-messages.503": "Service unavailable",
   "lib.errors.status-code-messages.504": "Gateway timeout",
   "lib.errors.status-code-messages.520": "Unknown error",
+  "lib.shared-messages.16Bit": "16 bit",
+  "lib.shared-messages.32Bit": "32 bit",
   "lib.shared-messages.abp": "Activation by personalization (ABP)",
   "lib.shared-messages.activationMode": "Activation mode",
   "lib.shared-messages.add": "Add",
@@ -532,6 +534,7 @@
   "lib.shared-messages.firmwareVersion": "Firmware version",
   "lib.shared-messages.fNwkSIntKey": "FNwkSIntKey",
   "lib.shared-messages.fNwkSIntKeyDescription": "Forwarding network session integrity key",
+  "lib.shared-messages.frameCounterWidth": "Frame counter width",
   "lib.shared-messages.frequencyPlan": "Frequency plan",
   "lib.shared-messages.gateway": "Gateway",
   "lib.shared-messages.gatewayDescription": "Gateway description",
