--- a/pkg/webui/locales/xx.json
+++ b/pkg/webui/locales/xx.json
@@ -408,6 +408,8 @@
   "lib.errors.status-code-messages.503": "Xxxxxxx xxxxxxxxxxx",
   "lib.errors.status-code-messages.504": "Xxxxxxx xxxxxxx",
   "lib.errors.status-code-messages.520": "Xxxxxxx xxxxx",
+  "lib.shared-messages.16Bit": "xx xxx",
+  "lib.shared-messages.32Bit": "xx xxx",
   "lib.shared-messages.abp": "Xxxxxxxxxx xx xxxxxxxxxxxxxxx (XXX)",
   "lib.shared-messages.activationMode": "Xxxxxxxxxx xxxx",
   "lib.shared-messages.add": "Xxx",
@@ -532,6 +534,7 @@
   "lib.shared-messages.firmwareVersion": "Xxxxxxxx xxxxxxx",
   "lib.shared-messages.fNwkSIntKey": "XXxxXXxxXxx",
   "lib.shared-messages.fNwkSIntKeyDescription": "Xxxxxxxxxx xxxxxxx xxxxxxx xxxxxxxxx xxx",
+  "lib.shared-messages.frameCounterWidth": "Xxxxx xxxxxxx xxxxx",
   "lib.shared-messages.frequencyPlan": "Xxxxxxxxx xxxx",
   "lib.shared-messages.gateway": "Xxxxxxx",
   "lib.shared-messages.gatewayDescription": "Xxxxxxx xxxxxxxxxxx",
