console: Fix event preview errors

--- a/pkg/webui/locales/en.json
+++ b/pkg/webui/locales/en.json
@@ -67,6 +67,7 @@
   "console.components.events.messages.txPower": "Tx Power",
   "console.components.events.messages.bandwidth": "Bandwidth",
   "console.components.events.messages.metrics": "Metrics",
+  "console.components.events.messages.versions": "Versions",
   "console.components.events.messages.snr": "SNR",
   "console.components.events.messages.sessionKeyId": "Session key ID",
   "console.components.events.messages.selectedMacVersion": "Selected MAC version",
