--- a/pkg/webui/locales/xx.json
+++ b/pkg/webui/locales/xx.json
@@ -67,6 +67,7 @@
   "console.components.events.messages.txPower": "Xx Xxxxx",
   "console.components.events.messages.bandwidth": "Xxxxxxxxx",
   "console.components.events.messages.metrics": "Xxxxxxx",
+  "console.components.events.messages.versions": "Xxxxxxxx",
   "console.components.events.messages.snr": "XXX",
   "console.components.events.messages.sessionKeyId": "Xxxxxxx xxx XX",
   "console.components.events.messages.selectedMacVersion": "Xxxxxxxx XXX xxxxxxx",
