console: Add warning to frequency_plan_id field

--- a/pkg/webui/locales/en.json
+++ b/pkg/webui/locales/en.json
@@ -219,6 +219,7 @@
   "console.containers.freq-plans-select.index.title": "Frequency plan",
   "console.containers.freq-plans-select.index.warning": "Frequency plans unavailable",
   "console.containers.freq-plans-select.index.description": "The frequency plan used by the end device",
+  "console.containers.freq-plans-select.index.none": "Do not set a frequency plan",
   "console.containers.gateway-location-form.gateway-location-form.locationDescription": "The location of this gateway may be publicly displayed",
   "console.containers.gateway-location-form.gateway-location-form.updateLocationFromStatus": "Update from status messages",
   "console.containers.gateway-location-form.gateway-location-form.updateLocationFromStatusDescription": "Update the location of this gateway based on incoming status messages",
@@ -578,6 +579,7 @@
   "lib.shared-messages.fNwkSIntKeyDescription": "Forwarding network session integrity key",
   "lib.shared-messages.frameCounterWidth": "Frame counter width",
   "lib.shared-messages.frequencyPlan": "Frequency plan",
+  "lib.shared-messages.frequencyPlanWarning": "Without choosing a frequency plan, packets from the gateway will not be correctly processed",
   "lib.shared-messages.gateway": "Gateway",
   "lib.shared-messages.gatewayDescDescription": "Optional gateway description; can also be used to save notes about the gateway",
   "lib.shared-messages.gatewayDescPlaceholder": "Description for my new gateway",
