--- a/pkg/webui/locales/xx.json
+++ b/pkg/webui/locales/xx.json
@@ -219,6 +219,7 @@
   "console.containers.freq-plans-select.index.title": "Xxxxxxxxx xxxx",
   "console.containers.freq-plans-select.index.warning": "Xxxxxxxxx xxxxx xxxxxxxxxxx",
   "console.containers.freq-plans-select.index.description": "Xxx xxxxxxxxx xxxx xxxx xx xxx xxx xxxxxx",
+  "console.containers.freq-plans-select.index.none": "Xx xxx xxx x xxxxxxxxx xxxx",
   "console.containers.gateway-location-form.gateway-location-form.locationDescription": "Xxx xxxxxxxx xx xxxx xxxxxxx xxx xx xxxxxxxx xxxxxxxxx",
   "console.containers.gateway-location-form.gateway-location-form.updateLocationFromStatus": "Xxxxxx xxxx xxxxxx xxxxxxxx",
   "console.containers.gateway-location-form.gateway-location-form.updateLocationFromStatusDescription": "Xxxxxx xxx xxxxxxxx xx xxxx xxxxxxx xxxxx xx xxxxxxxx xxxxxx xxxxxxxx",
@@ -578,6 +579,7 @@
   "lib.shared-messages.fNwkSIntKeyDescription": "Xxxxxxxxxx xxxxxxx xxxxxxx xxxxxxxxx xxx",
   "lib.shared-messages.frameCounterWidth": "Xxxxx xxxxxxx xxxxx",
   "lib.shared-messages.frequencyPlan": "Xxxxxxxxx xxxx",
+  "lib.shared-messages.frequencyPlanWarning": "Xxxxxxx xxxxxxxx x xxxxxxxxx xxxx, xxxxxxx xxxx xxx xxxxxxx xxxx xxx xx xxxxxxxxx xxxxxxxxx",
   "lib.shared-messages.gateway": "Xxxxxxx",
   "lib.shared-messages.gatewayDescDescription": "Xxxxxxxx xxxxxxx xxxxxxxxxxx; xxx xxxx xx xxxx xx xxxx xxxxx xxxxx xxx xxxxxxx",
   "lib.shared-messages.gatewayDescPlaceholder": "Xxxxxxxxxxx xxx xx xxx xxxxxxx",
